[gd_scene load_steps=4 format=3 uid="uid://cl7q56rmnnckn"]

[ext_resource type="Script" path="res://scripts/grid_square_area.gd" id="1_o3a6v"]
[ext_resource type="Texture2D" uid="uid://pbmijq4x4nkk" path="res://icon.svg" id="2_4fkwe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pvd6"]
size = Vector2(128, 128)

[node name="grid_square_area" type="Area2D"]
script = ExtResource("1_o3a6v")

[node name="grid_shape" type="CollisionShape2D" parent="."]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_7pvd6")

[node name="grid_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(64, 64)
texture = ExtResource("2_4fkwe")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
